Fix folder structure

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/dist/script/main.js": "/dist/script/main.js"
+    "/dist/script/main.js": "/dist/script/main.js",
+    "/dist/assets/css/main.css": "/dist/assets/css/main.css"
 }
